Allow multiple patterns - reformat