@@ -5,43 +5,46 @@ import static org.junit.Assert.assertTrue;
 
 import colouring.Config;
 import colouring.ConfigKey;
-import com.google.common.base.Joiner;
 import com.google.common.base.Splitter;
 import exceptions.InvalidColourException;
 import exceptions.InvalidConfigException;
 import exceptions.InvalidGenomicCoordsException;
 import htsjdk.samtools.SAMRecord;
-import htsjdk.samtools.SAMSequenceDictionary;
-import htsjdk.samtools.SAMSequenceRecord;
-import htsjdk.samtools.SamReader;
-import htsjdk.samtools.SamReaderFactory;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Stream;
 import org.broad.igv.util.FileUtils;
 import org.junit.Test;
 import samTextViewer.GenomicCoords;
 import samTextViewer.Utils;
-import tracks.TrackReads;
 
 public class SassyTest {
 
-  private final Path sassy = Path.of("test_data/sassy/sassy-x86_64-unknown-linux-gnu");
+  public static Path sassyExec() {
+    String os = System.getProperty("os.name").toLowerCase();
+    String base = "test_data/sassy/v0.2.0";
+    if (os.contains("mac")) {
+      return Paths.get(base, "sassy-aarch64-apple-darwin");
+    }
+    if (os.contains("linux")) {
+      return Paths.get(base, "sassy-x86_64-unknown-linux-gnu");
+    }
+    throw new RuntimeException("Unsupported platform: " + os);
+  }
+
+  private final Path sassy = sassyExec();
 
   @Test
   public void testPattern() throws Exception {
-    Path tempWorkDir = Utils.createTempDir("tmp.sassy.", true);
+    Path tempWorkDir = Utils.createTempDir("tmp.sassy.", false);
 
     GenomicCoords gc = new GenomicCoords("chr7:20001-25000", 80, null, "test_data/chr7.fa");
 
     Sassy sassy = new Sassy(gc, tempWorkDir);
     sassy.setExecPath(this.sassy);
     sassy.search(Splitter.on(" ").splitToList("-p AGRTGA -k 1"));
-    for(SAMRecord rec : sassy.getSamRecords().toList()) {
+    for (SAMRecord rec : sassy.getSamRecords().toList()) {
       if (rec.getReadNegativeStrandFlag()) {
         assertEquals("TCARCT", new String(rec.getReadBases()));
       } else {
@@ -50,10 +53,33 @@ public class SassyTest {
     }
 
     // Test fasta reference is correct
-    String fastaRef = sassy.getSamFileHeader().getProgramRecord("sassy").getCommandLine().replaceAll(".* ", "");
+    String fastaRef =
+        sassy.getSamFileHeader().getProgramRecord("sassy").getCommandLine().replaceAll(".* ", "");
     String fastaSeq = new String(FileUtils.readFully(fastaRef));
-    assertTrue(fastaSeq.startsWith(">chr7\nTGCCAGGAAAGCAGACACATCATCAAAATCCATTACAGAGGCTATAGTTCAGCCAAAGCT"));
+    assertTrue(
+        fastaSeq.startsWith(">chr7\nTGCCAGGAAAGCAGACACATCATCAAAATCCATTACAGAGGCTATAGTTCAGCCAAAGCT"));
     assertTrue(fastaSeq.endsWith("agacagccatcaaggaggtg\n"));
+  }
+
+  @Test
+  public void testMultiplePatterns() throws Exception {
+    Path tempWorkDir = Utils.createTempDir("tmp.sassy.", false);
+
+    GenomicCoords gc = new GenomicCoords("chr7:20001-25000", 80, null, "test_data/chr7.fa");
+
+    Sassy sassy = new Sassy(gc, tempWorkDir);
+    sassy.setExecPath(this.sassy);
+    sassy.search(
+        Splitter.on(" ")
+            .splitToList(
+                "-p TGCCAGGAAAGCAGACACATCATCAAAATCCATTACAGAGGCTATAGTTC,GATTACATCAGTGTTAGCGCATGGTGTGAATATTATATAGGTGTTAGGGC"
+                    + " -k 0"));
+    List<SAMRecord> recs = sassy.getSamRecords().toList();
+    assertEquals(2, recs.size());
+    assertEquals("1", recs.get(0).getReadName());
+    assertEquals("TGCCAGGAAAGCAGACACATCATCAAAATCCATTACAGAGGCTATAGTTC", recs.get(0).getReadString());
+    assertEquals("2", recs.get(1).getReadName());
+    assertEquals("GATTACATCAGTGTTAGCGCATGGTGTGAATATTATATAGGTGTTAGGGC", recs.get(1).getReadString());
   }
 
   @Test
@@ -84,12 +110,20 @@ public class SassyTest {
     sassy.setExecPath(this.sassy);
     sassy.search(Splitter.on(" ").splitToList("-f test_data/pattern.fa.gz -k 1"));
 
-    assertTrue(sassy.getSamFileHeader().getProgramRecord("sassy").getCommandLine().contains("search -f test_data/pattern.fa.gz -k 1"));
+    assertTrue(
+        sassy
+            .getSamFileHeader()
+            .getProgramRecord("sassy")
+            .getCommandLine()
+            .contains("search -f test_data/pattern.fa.gz -k 1"));
 
     Path outsam = Paths.get(sassy.getWorkDir().toString(), "tmp.sam");
     sassy.writeSAMFile(outsam);
     String sam = new String(FileUtils.readFully(outsam.toString()));
-    assertTrue(sam.contains("q1\t0\tchr7\t11251\t255\t50=\t*\t0\t0\tAAGAGGGCTACATTATTTATGAAACAGATACTGTTAACTCAGTCACCAGA\t*\tNM:i:0"));
+    assertTrue(
+        sam.contains(
+            "q1\t0\tchr7\t11251\t255\t50=\t*\t0\t0"
+                + "\tAAGAGGGCTACATTATTTATGAAACAGATACTGTTAACTCAGTCACCAGA\t*\tNM:i:0"));
   }
 
   @Test
@@ -105,12 +139,19 @@ public class SassyTest {
     Path outsam = Paths.get(sassy.getWorkDir().toString(), "tmp.sam");
     sassy.writeSAMFile(outsam);
     String sam = new String(FileUtils.readFully(outsam.toString()));
-    assertTrue(sam.contains("1\t0\tchr7\t11251\t255\t50=\t*\t0\t0\tAAGAGGGCTACATTATTTATGAAACAGATACTGTTAACTCAGTCACCAGA\t*\tNM:i:0"));
+    assertTrue(
+        sam.contains(
+            "1\t0\tchr7\t11251\t255\t50=\t*\t0\t0"
+                + "\tAAGAGGGCTACATTATTTATGAAACAGATACTGTTAACTCAGTCACCAGA\t*\tNM:i:0"));
   }
 
   @Test
   public void testConfigPath()
-      throws IOException, InvalidConfigException, InvalidColourException, InvalidGenomicCoordsException, InterruptedException {
+      throws IOException,
+          InvalidConfigException,
+          InvalidColourException,
+          InvalidGenomicCoordsException,
+          InterruptedException {
     new Config(null);
     Config.set(ConfigKey.sassy, this.sassy.toString());
 
@@ -120,6 +161,5 @@ public class SassyTest {
     Sassy sassy = new Sassy(gc, tempWorkDir);
     sassy.setExecPath(Paths.get(Config.get(ConfigKey.sassy)));
     sassy.search(Splitter.on(" ").splitToList("-p AAGRTGAG -k 1"));
-
   }
 }
